Add SSH key to API create model
